# fractal-indexing-viz

./: .gitignore  .zenodo.json  CITATION.cff  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/viz/: __init__.py  box_counting.py  hilbert_d2.py  hnsw_lid.py  mfdfa_stream.py  selectivity_fan.py
tests/: test_smoke.py
