[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fractal-indexing-viz"
version = "0.0.1"
description = "Interactive visualizations for fractal mathematics in modern indexing systems — Hilbert curves with intrinsic-dimension overlays, HNSW layers with LID coloring, streaming MFDFA spectra, selectivity error fans, box-counting walk-throughs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Dineshkumar Malempati Hari", email = "mhdk.dinesh@gmail.com" },
]
keywords = [
    "visualization",
    "streamlit",
    "Hilbert-curve",
    "HNSW",
    "MFDFA",
    "fractal",
    "teaching",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "streamlit>=1.31",
    "plotly>=5.18",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "MFDFA>=0.4",
    "yfinance>=0.2.37",
]

[project.optional-dependencies]
manim = ["manim>=0.18"]
hnsw = ["hnswlib>=0.8.0"]
dev = ["pytest>=7.0", "ruff>=0.3"]

[project.urls]
Repository = "https://github.com/mhdk1602/fractal-indexing-viz"
"H2 pre-registration" = "https://doi.org/10.5281/zenodo.20188013"

[tool.hatch.build.targets.wheel]
packages = ["src/viz"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
